force-app/main/default/objects/DigitalProduct__c/DigitalProduct__c.object-meta.xml
<CustomObject>
    <label>Digital Product</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>