force-app/main/default/objects/DigitalProduct__c/fields/DownloadUrl__c.field-meta.xml
<CustomField>
    <fullName>DownloadUrl__c</fullName>
    <label>Download Url</label>
    <type>Url</type>
</CustomField>