force-app/main/default/objects/DigitalProduct__c/fields/LatestFileId__c.field-meta.xml
<CustomField>
    <fullName>LatestFileId__c</fullName>
    <label>Latest File Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>