force-app/main/default/objects/DigitalProduct__c/fields/SellingPrice__c.field-meta.xml
<CustomField>
    <fullName>SellingPrice__c</fullName>
    <label>Selling Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>