force-app/main/default/objects/DigitalProduct__c/fields/Validity__c.field-meta.xml
<CustomField>
    <fullName>Validity__c</fullName>
    <label>Validity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
                <default>true</default>
                <label>30 Days</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60 Days</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>90 Days</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>120 Days</label>
            </value>
            <value>
                <fullName>365</fullName>
                <label>365 Days</label>
            </value>
            <value>
                <fullName>99999</fullName>
                <label>Lifetime</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>