force-app/main/default/objects/DigitalProduct__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UnitPrice__c</columns>
    <columns>SellingPrice__c</columns>
    <columns>Status__c</columns>
    <columns>Validity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>